# Buddy

./: .env.example  README.md  agent_buddy.py  gitignore.txt  main.py  pyproject.toml  python-version.txt  server.py
Buddy/: __init__.py
Buddy/prompts/: __init__.py
Buddy/resources/: __init__.py
Buddy/tools/: __init__.py  web.py
