[project]
name = "buddy-ai-assistant"
version = "0.1.0"
description = "Buddy — A personal AI voice assistant powered by MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "httpx",
    "livekit-agents[deepgram,groq,openai,sarvam,silero]>=1.5.1",
    "livekit-plugins-google>=1.5.1",
    "python-dotenv",
]

[project.scripts]
buddy = "server:main"
buddy_voice = "agent_buddy:dev"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["buddy"]
